-webkit only backface visibility on body, causes issues with fixed positions in Firefox.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,7 +19,7 @@ body {
     width: 100%;
     min-width: 0;
   }
-  @include backface-visibility(hidden); // Fixes Chrome 1px shift rendering issue on CSS3 transitions.
+  -webkit-backface-visibility:(hidden); // Fixes Chrome 1px shift rendering issue on CSS3 transitions.
 }
 
 .ie9 {
